--- a/audio_wholesale_analysis.ipynb
+++ b/audio_wholesale_analysis.ipynb
@@ -4239,7 +4239,7 @@
     "\n",
     "- Сбой в работе CRM, выявленный 13–14 марта, указывает на необходимость внедрения мониторинга аномалий и резервных сценариев обработки заказов, чтобы минимизировать будущие потери выручки.\n",
     "\n",
-    "- В целях повышения эффективности отдела продаж рекомендуется усилить работу с сотрудниками с низкими показателями, используя обучение и обновлённую систему KPI."
+    "- В целях повышения эффективности отдела продаж рекомендуется усилить работу с сотрудниками с низкими показателями, используя обучение и обновленную систему KPI."
    ]
   }
  ],
